--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "next-portfolio-strapi-api",
+  "name": "dfsilva-portfolio-api",
   "private": true,
   "version": "0.1.0",
   "description": "A Strapi application",
@@ -11,30 +11,24 @@
   },
   "devDependencies": {},
   "dependencies": {
-    "knex": "0.21.18",
-    "pg": "8.5.1",
-    "strapi": "3.6.8",
-    "strapi-admin": "3.6.8",
-    "strapi-connector-bookshelf": "3.6.8",
-    "strapi-plugin-ckeditor5": "^1.14.0",
-    "strapi-plugin-content-manager": "3.6.8",
-    "strapi-plugin-content-type-builder": "3.6.8",
-    "strapi-plugin-email": "3.6.8",
-    "strapi-plugin-graphql": "3.6.8",
-    "strapi-plugin-i18n": "3.6.8",
-    "strapi-plugin-upload": "3.6.8",
-    "strapi-plugin-users-permissions": "3.6.8",
-    "strapi-utils": "3.6.8"
+    "@strapi/plugin-graphql": "4.1.5",
+    "@strapi/plugin-i18n": "4.1.5",
+    "@strapi/plugin-users-permissions": "4.1.5",
+    "@strapi/provider-upload-cloudinary": "^4.1.5",
+    "@strapi/strapi": "4.1.5",
+    "pg": "8.6.0",
+    "strapi-plugin-ckeditor5": "^2.1.1-rc.1",
+    "strapi-provider-upload-cloudinary": "^3.6.8"
   },
   "author": {
     "name": "A Strapi developer"
   },
   "strapi": {
-    "uuid": "9ecff4c4-7852-46f6-a369-66be35e91ad8"
+    "uuid": "19fabcda-a41d-440a-9b61-014b4c4fb858"
   },
   "engines": {
-    "node": ">=10.16.0 <=14.x.x",
-    "npm": "^6.0.0"
+    "node": ">=12.x.x <=16.x.x",
+    "npm": ">=6.0.0"
   },
   "license": "MIT"
 }
